--- a/sentiment-service/requirements.txt
+++ b/sentiment-service/requirements.txt
@@ -1,15 +1,11 @@
-# Sentiment Analysis Service - Requirements
 fastapi==0.110.0
 uvicorn[standard]==0.27.0
 pydantic==2.6.0
 
 # Sentiment Analysis
 transformers==4.40.0
-scipy>=1.13.0
-torch==2.2.0
+onnxruntime==1.17.1
 
-# Logging
+# Utilidades
+numpy<2.0.0
 python-dotenv==1.0.0
-
-# Utilities
-numpy>=1.24.0
